--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.6.1"
+    "nodemailer": "^6.6.1",
+    "nodemailer-mailgun-transport": "^2.1.3"
   }
 }
